--- a/unit5-start/dishes.html
+++ b/unit5-start/dishes.html
@@ -38,7 +38,7 @@
         <div class="gallery">
 
             <figure>
-                <img src="assets/caesar-salad.jpg" alt="Caesar Salad" width="300" height="225" loading="lazy">
+                <img src="images/caesar-salad.jpg" alt="Caesar Salad" width="300" height="225" loading="lazy">
                 <figcaption> Caesar Salad</figcaption>
             </figure>
 
